# automated_prior_analysis

./: .gitignore  .pre-commit-config.yaml  Implement_Var_t.py  LICENSE  README.md  environment.yml  implement_VAR.py  model_betaX.py  pyproject.toml  requirements.txt  values.csv  values_with_X3.csv
data/: USdata_2019Q4.xlsx
