[tool.poetry]
name = "automated-prior-analysis"
version = "0.1.0"
description = "Project for the third year class \"Bayesian Statistics\" at ENSAE IP Paris"
authors = ["Benjamin Maurel <benjamin.maurel@ensae.fr>, Gabriel Watkinson <gabriel.watkinson@ensae.fr>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
