[tool.poetry]
name = "automated-prior-analysis"
version = "0.1.0"
description = "Project for the third year class \"Bayesian Statistics\" at ENSAE IP Paris"
authors = ["Benjamin Maurel <benjamin.maurel@ensae.fr>, Gabriel Watkinson <gabriel.watkinson@ensae.fr>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
# Classic data packages
scipy = "^1.10.0"
numpy = "^1.24.1"
pandas = "^1.5.2"
# Plotting packages
matplotlib = "^3.6.3"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.2"
ipywidgets = "^8.0.4"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
